--- a/interesting-code.cabal
+++ b/interesting-code.cabal
@@ -15,12 +15,27 @@ license-file:    LICENSE
 common common-options
   build-depends:      base >=4.9 && <5
   default-language:   Haskell2010
-  default-extensions: 
+  default-extensions: DataKinds,
+                      TypeOperators,
+                      TypeApplications,
+                      DeriveGeneric,
+                      DeriveAnyClass,
+                      RankNTypes,
+                      KindSignatures,
+                      StandaloneKindSignatures,
+                      PolyKinds,
+                      TypeFamilies,
+                      InstanceSigs
   ghc-options:
 
-executable interesting-code-exe
-  import:         common-options
-  hs-source-dirs: src
-  main-is:        Main.hs
-  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
+library
+  import:          common-options
+  hs-source-dirs:  src
+  exposed-modules: Test
+                   TypeConstraints,
+                   OneOfN.OneOfN,
+                   OneOfN.TH
+                   VOneOfN
+  other-modules:   
+  build-depends:   first-class-families,
+                   template-haskell
